:sparkles: Main menu minor fix & Added the lasagna recipe page

--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="something">Easy Lasagna</a>
-        </li>
-        <li>
+        <a href="Recipes/lasagna.html">Easy Lasagna</a>
+      </li>
+      <li>
         <a href="something">BLT Pizza</a>
-        </li>
-        <li>
-            <a href='something'>Warm Berry Compote</a>
-        </li>
+      </li>
+      <li>
+        <a href="something">Warm Berry Compote</a>
       </li>
     </ul>
   </body>
