:sparkles: Added the blt pizza recipe page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="Recipes/lasagna.html">Easy Lasagna</a>
       </li>
       <li>
-        <a href="something">BLT Pizza</a>
+        <a href="Recipes/blt-pizza.html">BLT Pizza</a>
       </li>
       <li>
         <a href="something">Warm Berry Compote</a>
