:sparkles: Added the warm berry compote recipe

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="Recipes/blt-pizza.html">BLT Pizza</a>
       </li>
       <li>
-        <a href="something">Warm Berry Compote</a>
+        <a href="Recipes/warm-berry.html">Warm Berry Compote</a>
       </li>
     </ul>
   </body>
