:memo: Changed hyperlinks target property

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li>
-        <a href="Recipes/lasagna.html">Easy Lasagna</a>
+        <a href="Recipes/lasagna.html" target="_blank">Easy Lasagna</a>
       </li>
       <li>
-        <a href="Recipes/blt-pizza.html">BLT Pizza</a>
+        <a href="Recipes/blt-pizza.html" target="_blank">BLT Pizza</a>
       </li>
       <li>
-        <a href="Recipes/warm-berry.html">Warm Berry Compote</a>
+        <a href="Recipes/warm-berry.html" target="_blank">Warm Berry Compote</a>
       </li>
     </ul>
   </body>
