--- a/Recipes/blt-pizza.html
+++ b/Recipes/blt-pizza.html
@@ -12,9 +12,14 @@
     <p>A recipe for BLT Pizza</p>
     <p>
       Original recipe
-      <a href="https://www.allrecipes.com/recipe/55307/blt-pizza/"> here </a>
+      <a
+        href="https://www.allrecipes.com/recipe/55307/blt-pizza/"
+        target="_blank"
+      >
+        here</a
+      >
       by AMYAME on
-      <a href="https://www.allrecipes.com/">allrecipes.com</a>
+      <a href="https://www.allrecipes.com/" target="_blank">allrecipes.com</a>
     </p>
     <h2>Ingredients</h2>
     <ul>
@@ -47,7 +52,7 @@
         Bake pizza for 10 to 15 minutes in the preheated oven, until crust is
         golden and cheese is melted in the center. Meanwhile, toss shredded
         lettuce with mayonnaise; season lightly with salt and pepper. Top
-        finished pizza with dressed lettuce and serve immediately
+        finished pizza with dressed lettuce and serve immediately.
       </li>
     </ol>
   </body>
