--- a/Recipes/warm-berry.html
+++ b/Recipes/warm-berry.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lasagna Recipe</title>
+    <title>Warm Berry Compote Recipe</title>
   </head>
   <body>
     <h1>Warm Berry Compote</h1>
@@ -15,11 +15,16 @@
     <p>A recipe for Warm Berry Compote</p>
     <p>
       Original recipe
-      <a href="https://www.allrecipes.com/recipe/256825/warm-berry-compote/">
+      <a
+        href="https://www.allrecipes.com/recipe/256825/warm-berry-compote/"
+        target="_blank"
+      >
         here</a
       >
       by cupcakeproject on
-      <a href="https://www.allrecipes.com/">allrecipes.com</a>
+      <a href="https://www.allrecipes.com/ target=" target="_blank"
+        >allrecipes.com</a
+      >
     </p>
     <h2>Ingredients</h2>
     <ul>
