:rocket: Task II initial commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <ul>
       <li>
         <h4><a href="Task I - Odin Recipes/">Task I - Odin Recipes</a></h>
-      </li>
+        </li>
+        <li>
+        <h4><a href="Task II - Personal Portfolio/">Task II - Personal Portfolio</a></h>
+        </li>
     </ul>
   </body>
 </html>
