--- a/Task II - Personal Portfolio/index.html
+++ b/Task II - Personal Portfolio/index.html
@@ -11,9 +11,9 @@
       <h1>My Portfolio</h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="/about">About</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -25,8 +25,20 @@
           functional websites.
         </p>
       </section>
+      <h2>My Projects</h2>
       <section class="projects-grid">
-        <h2>My Projects</h2>
+        <div class="project">
+          <img src="https://via.placeholder.com/150" alt="Project 1" />
+          <h3>Project 1</h3>
+        </div>
+        <div class="project">
+          <img src="https://via.placeholder.com/150" alt="Project 1" />
+          <h3>Project 1</h3>
+        </div>
+        <div class="project">
+          <img src="https://via.placeholder.com/150" alt="Project 1" />
+          <h3>Project 1</h3>
+        </div>
         <div class="project">
           <img src="https://via.placeholder.com/150" alt="Project 1" />
           <h3>Project 1</h3>
@@ -41,7 +53,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="contact" id="contact">
       <p>© 2024 My Portfolio</p>
     </footer>
   </body>
