--- a/Task II - Personal Portfolio/index.html
+++ b/Task II - Personal Portfolio/index.html
@@ -52,6 +52,29 @@
           <h3>Project 3</h3>
         </div>
       </section>
+      <section class="content">
+        <h2>Contact</h2>
+        <div class="contact-images--container">
+          <a href="https://www.linkedin.com/in/loayahmed304" target="_blank">
+            <img src="images/LinkedIn_logo_initials.png" />
+          </a>
+          <a href="https://github.com/LoayAhmed304" target="_blank">
+            <img src="images/github.png" />
+          </a>
+          <a href="https://leetcode.com/u/cowabunga/" target="_blank">
+            <img src="images/leetcode.jpeg" />
+          </a>
+          <a href="https://x.com/eLoayAhmed" target="_blank">
+            <img src="images/x.avif" />
+          </a>
+          <a
+            href="https://discord.com/users/320570558385487874"
+            target="_blank"
+          >
+            <img src="images/discord.png" />
+          </a>
+        </div>
+      </section>
     </main>
     <footer class="contact" id="contact">
       <p>© 2024 My Portfolio</p>
