:wrench: Re-added the main index.html

--- a/Task II - Personal Portfolio/index.html
+++ b/Task II - Personal Portfolio/index.html
@@ -51,8 +51,16 @@
           <img src="https://via.placeholder.com/150" alt="Project 3" />
           <h3>Project 3</h3>
         </div>
+        <div class="project">
+          <img src="https://via.placeholder.com/150" alt="Project 3" />
+          <h3>Project 3</h3>
+        </div>
+        <div class="project">
+          <img src="https://via.placeholder.com/150" alt="Project 3" />
+          <h3>Project 3</h3>
+        </div>
       </section>
-      <section class="content">
+      <section class="contact" id="contact">
         <h2>Contact</h2>
         <div class="contact-images--container">
           <a href="https://www.linkedin.com/in/loayahmed304" target="_blank">
@@ -76,7 +84,7 @@
         </div>
       </section>
     </main>
-    <footer class="contact" id="contact">
+    <footer>
       <p>© 2024 My Portfolio</p>
     </footer>
   </body>
