--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loay Ahmed</title>
     <script defer src="script.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="introduction.css" />
+    <link rel="stylesheet" href="portfolio.css" />
   </head>
   <body>
     <section class="top">
@@ -41,5 +42,6 @@
         </div>
       </div>
     </section>
+    <section class="portfolio"></section>
   </body>
 </html>
