:bulb: Task III - Added portfolio section and the projects grid display

--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -42,6 +42,55 @@
         </div>
       </div>
     </section>
-    <section class="portfolio"></section>
+    <section class="portfolio">
+      <div class="container--portfolio">
+        <h1 class="title--portfolio">PORTFOLIO</h1>
+        <h3 class="subhead--portfolio">My Projects</h3>
+        <div class="projects-container">
+          <div class="project-block">
+            <div class="project-details">
+              <img src="images/personal-square.JPEG" />
+              <p class="project-title">Alien Invasion</p>
+              <p class="project-description">A DS Project</p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project-details">
+              <img src="images/personal-square.JPEG" />
+              <p class="project-title">Alien Invasion</p>
+              <p class="project-description">A DS Project</p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project-details">
+              <img src="images/personal-square.JPEG" />
+              <p class="project-title">Alien Invasion</p>
+              <p class="project-description">A DS Project</p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project-details">
+              <img src="images/personal-square.JPEG" />
+              <p class="project-title">Alien Invasion</p>
+              <p class="project-description">A DS Project</p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project-details">
+              <img src="images/personal-square.JPEG" />
+              <p class="project-title">Alien Invasion</p>
+              <p class="project-description">A DS Project</p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project-details">
+              <img src="images/personal-square.JPEG" />
+              <p class="project-title">Alien Invasion</p>
+              <p class="project-description">A DS Project</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
