:page_facing_up: Added Task III hyperlink to the main page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
         <h4><a href="Task II - Personal Portfolio/">Task II - Personal Portfolio</a></h>
         </li>
+        <li>
+          <h4><a href="Task III - Personal Portfolio II/">Task III - Personal Portfolio II</a></h>
+          </li>
     </ul>
   </body>
 </html>
