:construction: Task III - Added the projects display section and the hamburger menu icon (WIP)

--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -14,9 +14,14 @@
         <div class="left-bar">Loay <span class="second-name">Ahmed</span></div>
         <div class="right-bar">
           <button>Home</button>
+          <button>Projects</button>
           <button>About</button>
-          <button>Services</button>
           <button>Contact</button>
+        </div>
+        <div class="hamburger-menu">
+          <div class="top-element"></div>
+          <div class="middle-element"></div>
+          <div class="bottom-element"></div>
         </div>
       </div>
     </section>
@@ -49,44 +54,53 @@
         <div class="projects-container">
           <div class="project-block">
             <div class="project-details">
-              <img src="images/personal-square.JPEG" />
-              <p class="project-title">Alien Invasion</p>
-              <p class="project-description">A DS Project</p>
+              <img src="images/project1.webp" />
+              <p class="project-title">Paint For Kids</p>
+              <p class="project-description">
+                An OOP course university project
+              </p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project-details tesla-project">
+              <img src="images/tesla3.jpg" />
+              <p class="project-title">Tesla Clone</p>
+              <p class="project-description">A clone of tesla.com website</p>
             </div>
           </div>
           <div class="project-block">
             <div class="project-details">
-              <img src="images/personal-square.JPEG" />
+              <img src="images/alien-invasion3.webp" />
               <p class="project-title">Alien Invasion</p>
-              <p class="project-description">A DS Project</p>
+              <p class="project-description">
+                A Datastructure course university simulation project
+              </p>
+            </div>
+          </div>
+
+          <div class="project-block">
+            <div class="project-details">
+              <img src="images/forkify.webp" />
+              <p class="project-title">Forkify App</p>
+              <p class="project-description">A recipe finder web application</p>
+            </div>
+          </div>
+          <div class="project-block">
+            <div class="project-details mapty-project">
+              <img src="images/mapty2.jpg" />
+              <p class="project-title">Mapty</p>
+              <p class="project-description">
+                A web application to add and customize activity pins on the map
+              </p>
             </div>
           </div>
           <div class="project-block">
             <div class="project-details">
-              <img src="images/personal-square.JPEG" />
-              <p class="project-title">Alien Invasion</p>
-              <p class="project-description">A DS Project</p>
-            </div>
-          </div>
-          <div class="project-block">
-            <div class="project-details">
-              <img src="images/personal-square.JPEG" />
-              <p class="project-title">Alien Invasion</p>
-              <p class="project-description">A DS Project</p>
-            </div>
-          </div>
-          <div class="project-block">
-            <div class="project-details">
-              <img src="images/personal-square.JPEG" />
-              <p class="project-title">Alien Invasion</p>
-              <p class="project-description">A DS Project</p>
-            </div>
-          </div>
-          <div class="project-block">
-            <div class="project-details">
-              <img src="images/personal-square.JPEG" />
-              <p class="project-title">Alien Invasion</p>
-              <p class="project-description">A DS Project</p>
+              <img src="images/weather.webp" />
+              <p class="project-title">Weather Application</p>
+              <p class="project-description">
+                A real-time weather data web application
+              </p>
             </div>
           </div>
         </div>
