:pushpin: Task III - Linked projects to their Github repository

--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -54,57 +54,71 @@
         <h1 class="title--portfolio">PORTFOLIO</h1>
         <h3 class="subhead--portfolio">My Projects</h3>
         <div class="projects-container">
-          <div class="project-block">
-            <div class="project-details">
-              <img src="images/project1.webp" />
-              <p class="project-title">Paint For Kids</p>
-              <p class="project-description">
-                An OOP course university project
-              </p>
+          <a href="https://github.com/AhmedSobhy01/kids-art">
+            <div class="project-block">
+              <div class="project-details">
+                <img src="images/project1.webp" />
+                <p class="project-title">Paint For Kids</p>
+                <p class="project-description">
+                  An OOP course university project
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="project-block">
-            <div class="project-details tesla-project">
-              <img src="images/tesla3.jpg" />
-              <p class="project-title">Tesla Clone</p>
-              <p class="project-description">A clone of tesla.com website</p>
+          </a>
+          <a href="https://github.com/LoayAhmed304/tesla-clone">
+            <div class="project-block">
+              <div class="project-details tesla-project">
+                <img src="images/tesla3.jpg" />
+                <p class="project-title">Tesla Clone</p>
+                <p class="project-description">A clone of tesla.com website</p>
+              </div>
             </div>
-          </div>
-          <div class="project-block">
-            <div class="project-details">
-              <img src="images/alien-invasion3.webp" />
-              <p class="project-title">Alien Invasion</p>
-              <p class="project-description">
-                A Datastructure course university simulation project
-              </p>
+          </a>
+          <a href="https://github.com/LoayAhmed304/alien-invasion">
+            <div class="project-block">
+              <div class="project-details">
+                <img src="images/alien-invasion3.webp" />
+                <p class="project-title">Alien Invasion</p>
+                <p class="project-description">
+                  A Datastructure course university simulation project
+                </p>
+              </div>
             </div>
-          </div>
-
-          <div class="project-block">
-            <div class="project-details">
-              <img src="images/forkify.webp" />
-              <p class="project-title">Forkify App</p>
-              <p class="project-description">A recipe finder web application</p>
+          </a>
+          <a href="https://github.com/LoayAhmed304/forkify-app">
+            <div class="project-block">
+              <div class="project-details">
+                <img src="images/forkify.webp" />
+                <p class="project-title">Forkify App</p>
+                <p class="project-description">
+                  A recipe finder web application
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="project-block">
-            <div class="project-details mapty-project">
-              <img src="images/mapty2.jpg" />
-              <p class="project-title">Mapty</p>
-              <p class="project-description">
-                A web application to add and customize activity pins on the map
-              </p>
+          </a>
+          <a href="https://github.com/LoayAhmed304/mapty-app">
+            <div class="project-block">
+              <div class="project-details mapty-project">
+                <img src="images/mapty2.jpg" />
+                <p class="project-title">Mapty</p>
+                <p class="project-description">
+                  A web application to add and customize activity pins on the
+                  map
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="project-block">
-            <div class="project-details">
-              <img src="images/weather.webp" />
-              <p class="project-title">Weather Application</p>
-              <p class="project-description">
-                A real-time weather data web application
-              </p>
+          </a>
+          <a href="https://github.com/LoayAhmed304/weather-app">
+            <div class="project-block">
+              <div class="project-details">
+                <img src="images/weather.webp" />
+                <p class="project-title">Weather Application</p>
+                <p class="project-description">
+                  A real-time weather data web application
+                </p>
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
     </section>
