--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -174,6 +174,26 @@
         </div>
       </div>
     </section>
-    <section class="socials" id="socials"></section>
+    <section class="socials" id="socials">
+      <h1 class="socials--title">SOCIALS</h1>
+      <div class="icons-container">
+        <a href="mailto:loayahmed304@gmail.com" target="_blank">
+          <img src="images/gmail.png" alt="" />
+        </a>
+        <a href="https://github.com/LoayAhmed304" target="_blank">
+          <img src="images/github.webp" alt="" />
+        </a>
+        <a href="https://discord.com/users/320570558385487874" target="_blank">
+          <img src="images/discord.png" alt="" />
+        </a>
+        <a href="https://www.linkedin.com/in/loayahmed304/" target="_blank">
+          <img src="images/LinkedIn_logo_initials.png" alt="" />
+        </a>
+        <a href="https://leetcode.com/u/cowabunga/" target="_blank">
+          <img src="images/leetcode.jpeg" alt="" />
+        </a>
+      </div>
+      <p>© 2024 Loay Ahmed</p>
+    </section>
   </body>
 </html>
