--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -9,16 +9,17 @@
     <link rel="stylesheet" href="portfolio.css" />
     <link rel="stylesheet" href="about.css" />
     <link rel="stylesheet" href="socials.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <section class="top">
       <div class="top-bar">
         <div class="left-bar">Loay <span class="second-name">Ahmed</span></div>
         <div class="right-bar">
-          <button>Home</button>
-          <button>Projects</button>
-          <button>About</button>
-          <button>Socials</button>
+          <a href="#home"><button>Home</button></a>
+          <a href="#projects"><button>Projects</button></a>
+          <a href="#about"><button>About</button></a>
+          <a href="#socials"><button>Socials</button></a>
         </div>
         <div class="hamburger-menu">
           <div class="top-element"></div>
@@ -54,7 +55,7 @@
         <h1 class="title--portfolio">PORTFOLIO</h1>
         <h3 class="subhead--portfolio">My Projects</h3>
         <div class="projects-container">
-          <a href="https://github.com/AhmedSobhy01/kids-art">
+          <a href="https://github.com/AhmedSobhy01/kids-art" target="_blank">
             <div class="project-block">
               <div class="project-details">
                 <img src="images/project1.webp" />
@@ -65,7 +66,7 @@
               </div>
             </div>
           </a>
-          <a href="https://github.com/LoayAhmed304/tesla-clone">
+          <a href="https://github.com/LoayAhmed304/tesla-clone" target="_blank">
             <div class="project-block">
               <div class="project-details tesla-project">
                 <img src="images/tesla3.jpg" />
@@ -74,7 +75,10 @@
               </div>
             </div>
           </a>
-          <a href="https://github.com/LoayAhmed304/alien-invasion">
+          <a
+            href="https://github.com/LoayAhmed304/alien-invasion"
+            target="_blank"
+          >
             <div class="project-block">
               <div class="project-details">
                 <img src="images/alien-invasion3.webp" />
@@ -85,7 +89,7 @@
               </div>
             </div>
           </a>
-          <a href="https://github.com/LoayAhmed304/forkify-app">
+          <a href="https://github.com/LoayAhmed304/forkify-app" target="_blank">
             <div class="project-block">
               <div class="project-details">
                 <img src="images/forkify.webp" />
@@ -96,7 +100,7 @@
               </div>
             </div>
           </a>
-          <a href="https://github.com/LoayAhmed304/mapty-app">
+          <a href="https://github.com/LoayAhmed304/mapty-app" target="_blank">
             <div class="project-block">
               <div class="project-details mapty-project">
                 <img src="images/mapty2.jpg" />
@@ -108,7 +112,7 @@
               </div>
             </div>
           </a>
-          <a href="https://github.com/LoayAhmed304/weather-app">
+          <a href="https://github.com/LoayAhmed304/weather-app" target="_blank">
             <div class="project-block">
               <div class="project-details">
                 <img src="images/weather.webp" />
