:sparkles: Task III - Added sections transitions

--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -54,7 +54,7 @@
       <div class="container--portfolio">
         <h1 class="title--portfolio">PORTFOLIO</h1>
         <h3 class="subhead--portfolio">My Projects</h3>
-        <div class="projects-container">
+        <div class="projects-container hidden-section">
           <a href="https://github.com/AhmedSobhy01/kids-art" target="_blank">
             <div class="project-block">
               <div class="project-details">
@@ -127,60 +127,62 @@
       </div>
     </section>
     <section class="about" id="about">
-      <h1 class="about--title">WHAT I DO</h1>
-      <div class="about-container flex-column">
-        <div class="about-block flex-row">
-          <div class="vertical-line"></div>
-          <div class="line-title">Introduction</div>
-        </div>
-        <div class="block-content intro-content">
-          I’m a dedicated and forward-thinking Computer Engineering student
-          wholoves exploring the world of technology since childhood and dive
-          deep into its realm. My passion drives me towards Beta Testing,
-          Programming, Cybersecurity, and Data Science. I thrive on the
-          challenges that the dynamic field of computer engineering presents,and
-          am excited about applying my knowledge and creativity to make valuable
-          contributions to the world of technology.
-        </div>
-      </div>
-      <div class="about-container flex-column">
-        <div class="about-block flex-row">
-          <div class="vertical-line"></div>
-          <div class="line-title">Education</div>
-        </div>
-        <div class="block-content">
-          <div class="uni-details">
-            <div class="uni-block">
-              <p>Bachelor of Science in Computer Engineering</p>
-              <p class="italic-grey">Cairo University, Egypt</p>
-            </div>
-            <div class="date-block italic-grey">2022 - Present</div>
+      <div class="hidden-section">
+        <h1 class="about--title">WHAT I DO</h1>
+        <div class="about-container">
+          <div class="about-block flex-row">
+            <div class="vertical-line"></div>
+            <div class="line-title">Introduction</div>
+          </div>
+          <div class="block-content intro-content">
+            I’m a dedicated and forward-thinking Computer Engineering student
+            wholoves exploring the world of technology since childhood and dive
+            deep into its realm. My passion drives me towards Beta Testing,
+            Programming, Cybersecurity, and Data Science. I thrive on the
+            challenges that the dynamic field of computer engineering
+            presents,and am excited about applying my knowledge and creativity
+            to make valuable contributions to the world of technology.
           </div>
         </div>
-      </div>
-      <div class="about-container flex-column">
-        <div class="about-block flex-row">
-          <div class="vertical-line"></div>
-          <div class="line-title">Technologies</div>
+        <div class="about-container flex-column">
+          <div class="about-block flex-row">
+            <div class="vertical-line"></div>
+            <div class="line-title">Education</div>
+          </div>
+          <div class="block-content">
+            <div class="uni-details">
+              <div class="uni-block">
+                <p>Bachelor of Science in Computer Engineering</p>
+                <p class="italic-grey">Cairo University, Egypt</p>
+              </div>
+              <div class="date-block italic-grey">2022 - Present</div>
+            </div>
+          </div>
         </div>
-        <div class="block-content">
-          Driven by my passion for continuous learning and my curiosity to stay
-          in sync with the world, I enjoy putting my knowledge to use through
-          different projects and applications. Below are the technologies and
-          tools I've utilized along the way.
-        </div>
-        <div class="tools-images">
-          <img src="images/c-.png" alt="c++ icon" />
-          <img src="images/js.png" alt="javascript icon" />
-          <img src="images/html.png" alt="html icon" />
-          <img src="images/css.png" alt="css icon" />
-          <img src="images/python.png" alt="python icon" />
+        <div class="about-container flex-column">
+          <div class="about-block flex-row">
+            <div class="vertical-line"></div>
+            <div class="line-title">Technologies</div>
+          </div>
+          <div class="block-content">
+            Driven by my passion for continuous learning and my curiosity to
+            stay in sync with the world, I enjoy putting my knowledge to use
+            through different projects and applications. Below are the
+            technologies and tools I've utilized along the way.
+          </div>
+          <div class="tools-images">
+            <img src="images/c-.png" alt="c++ icon" />
+            <img src="images/js.png" alt="javascript icon" />
+            <img src="images/html.png" alt="html icon" />
+            <img src="images/css.png" alt="css icon" />
+            <img src="images/python.png" alt="python icon" />
+          </div>
         </div>
       </div>
     </section>
     <section class="socials" id="socials">
       <h1 class="socials--title">SOCIALS</h1>
-      <div class="icons-container">
+      <div class="icons-container hidden-section">
         <a href="mailto:loayahmed304@gmail.com" target="_blank">
           <img src="images/gmail.png" alt="" />
         </a>
