--- a/Task III - Personal Portfolio II/index.html
+++ b/Task III - Personal Portfolio II/index.html
@@ -51,10 +51,10 @@
       </div>
     </section>
     <section class="portfolio" id="projects">
-      <div class="container--portfolio">
+      <div class="container--portfolio hidden-section">
         <h1 class="title--portfolio">PORTFOLIO</h1>
         <h3 class="subhead--portfolio">My Projects</h3>
-        <div class="projects-container hidden-section">
+        <div class="projects-container">
           <a href="https://github.com/AhmedSobhy01/kids-art" target="_blank">
             <div class="project-block">
               <div class="project-details">
@@ -181,25 +181,30 @@
       </div>
     </section>
     <section class="socials" id="socials">
-      <h1 class="socials--title">SOCIALS</h1>
-      <div class="icons-container hidden-section">
-        <a href="mailto:loayahmed304@gmail.com" target="_blank">
-          <img src="images/gmail.png" alt="" />
-        </a>
-        <a href="https://github.com/LoayAhmed304" target="_blank">
-          <img src="images/github.webp" alt="" />
-        </a>
-        <a href="https://discord.com/users/320570558385487874" target="_blank">
-          <img src="images/discord.png" alt="" />
-        </a>
-        <a href="https://www.linkedin.com/in/loayahmed304/" target="_blank">
-          <img src="images/LinkedIn_logo_initials.png" alt="" />
-        </a>
-        <a href="https://leetcode.com/u/cowabunga/" target="_blank">
-          <img src="images/leetcode.jpeg" alt="" />
-        </a>
+      <div class="hidden-section">
+        <h1 class="socials--title">SOCIALS</h1>
+        <div class="icons-container">
+          <a href="mailto:loayahmed304@gmail.com" target="_blank">
+            <img src="images/gmail.png" alt="" />
+          </a>
+          <a href="https://github.com/LoayAhmed304" target="_blank">
+            <img src="images/github.webp" alt="" />
+          </a>
+          <a
+            href="https://discord.com/users/320570558385487874"
+            target="_blank"
+          >
+            <img src="images/discord.png" alt="" />
+          </a>
+          <a href="https://www.linkedin.com/in/loayahmed304/" target="_blank">
+            <img src="images/LinkedIn_logo_initials.png" alt="" />
+          </a>
+          <a href="https://leetcode.com/u/cowabunga/" target="_blank">
+            <img src="images/leetcode.jpeg" alt="" />
+          </a>
+        </div>
+        <p>© 2024 Loay Ahmed</p>
       </div>
-      <p>© 2024 Loay Ahmed</p>
     </section>
   </body>
 </html>
