:rocket: Refactoring submission code for task VI

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <li>
         <h4><a href="Task IV - Countries Website/">Task IV - Countries Website</a></h4>
       </li>
+      <li>
+        <h4><a href="https://web-react-task.netlify.app/">Task VI - REACT Posts Blog</a></h4>
+      </li>
     </ul>
   </body>
 </html>
